# opengl_playground

./: .gitignore  CMakeLists.txt  README.md  make_build.sh
assets/shaders/: flat.frag  flat.vert  primitives.frag  primitives.vert  screen.frag  screen.vert  skybox.frag  skybox.vert
src/: main.cc  ogp_array.cc  ogp_array.h  ogp_camera.cc  ogp_camera.h  ogp_cloth.cc  ogp_cloth.h  ogp_debug_draw.cc  ogp_debug_draw.h  ogp_defines.cc  ogp_defines.h  ogp_ecs.cc  ogp_ecs.h  ogp_fx.cc  ogp_fx.h  ogp_input.cc  ogp_input.h  ogp_math.cc  ogp_math.h  ogp_mesh.cc  ogp_mesh.h  ogp_messages.cc  ogp_messages.h  ogp_models.cc  ogp_models.h  ogp_opengl.cc  ogp_opengl.h  ogp_physics.cc  ogp_physics.h  ogp_player.cc  ogp_player.h  ogp_render.cc  ogp_render.h  ogp_sdl.cc  ogp_sdl.h  ogp_settings.cc  ogp_settings.h  ogp_shader.cc  ogp_shader.h  ogp_utils.cc  (+1 more)
tests/: CMakeLists.txt
tests/src/: test_array.cc  test_dummy.cc  test_ecs.cc  test_messages.cc
